vlib/v/checker/tests/non_const_match_range_err.out
vlib/v/checker/tests/non_const_match_range_err.vv:6:2: error: match branch range expressions need the start value to be known at compile time (only enums, const or literals are supported)
    4 | 
    5 | match 5 {
    6 |     start...end {
      |     ~~~~~
    7 |         println(start)
    8 |     }
vlib/v/checker/tests/non_const_match_range_err.vv:13:2: error: match branch range expressions need the start value to be known at compile time (only enums, const or literals are supported)
   11 | 
   12 | a := match 5 {
   13 |     start...end {
      |     ~~~~~
   14 |         0
   15 |     }
